<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjudeNos.Frag_ajudar">


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/icon_tags"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="428dp" />

        <TextView
            android:id="@+id/reward_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/help_reward_tags"
            android:textColor="@color/textDefault"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="433dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/icon_preasure"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="482dp" />

        <TextView
            android:id="@+id/reward_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/help_reward_more"
            android:textColor="@color/textDefault"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="493dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/help_title"
        android:textColor="@color/textDefault"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/help_desc"
        android:textColor="@color/textDefault"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/help_desc2"
        android:textColor="@color/textDefault"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <Button
        android:id="@+id/help_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_click_effect"
        android:text="@string/help_btn"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc2">

        <ImageView
            android:id="@+id/color_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/icon_pallete"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="225dp" />

        <TextView
            android:id="@+id/reward_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/help_reward_color"
            android:textColor="@color/textDefault"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="438dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:src="@android:drawable/ic_search_category_default"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="339dp" />

        <TextView
            android:id="@+id/reward_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/help_reward_query"
            android:textColor="@color/textDefault"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="350dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>