<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:elevation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email"
        fab:menu_openDirection="up"
        fab:fab_colorNormal="@color/menuButtonNormal"
        fab:fab_colorPressed="@color/menuButtonPressed">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_anotacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            android:src="@drawable/icon_menu_anotacao"
            fab:fab_label="@string/titleAnotacao"
            fab:fab_colorNormal="@color/menuButtonNormal"
            fab:fab_colorPressed="@color/menuButtonPressed"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            android:src="@drawable/icon_menu_lembrete"
            fab:fab_label="@string/titleLembrete"
            fab:fab_colorNormal="@color/menuButtonNormal"
            fab:fab_colorPressed="@color/menuButtonPressed"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_tags_prefs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            android:src="@drawable/icon_edit_prefs"
            fab:fab_label="@string/titleLembreteConfig"
            fab:fab_colorNormal="@color/menuButtonNormal"
            fab:fab_colorPressed="@color/menuButtonPressed"/>/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>